# netlify-rust-test

./: Cargo.toml  build.sh  netlify.toml
netlify/functions/axum-lambda-demo/: Cargo.toml
netlify/functions/axum-lambda-demo/src/: main.rs
netlify/functions/current-time/: Cargo.toml
netlify/functions/current-time/src/: main.rs
netlify/functions/hello/: Cargo.toml
netlify/functions/hello/src/: main.rs
