[workspace]
members = ["netlify/functions/hello", "netlify/functions/current-time"]

[dependencies]
aws_lambda_events = "0.4.0"
chrono = "0.4.33"
http = "0.2.4"
lambda_runtime = "0.3.0"
log = "0.4.14"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
simple_logger = "1.11.0"
tokio = "1.6.1"
