[package]
name = "current-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.13.1"
chrono = "0.4.33"
http = "1.0.0"
lambda_runtime = "0.9.1"
log = "0.4.14"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
simple_logger = "4.3.3"
tokio = "1.6.1"